# VectorGraphicsEditor

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
SVG_Editor/: CMakeLists.txt  CanvasView.cpp  CanvasView.h  CanvasViewCore.cpp  FileManager.cpp  FileManager.h  MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  PropertyPanel.h  SelectionFrame.cpp  SelectionFrame.h  SelectionTransformOverlayItem.cpp  SelectionTransformOverlayItem.h  ShapeData.cpp  ShapeData.h  ShapeFactory.cpp  ShapeItem.cpp  ShapeItem.h  ThemeUtils.cpp  ThemeUtils.h
SVG_Editor/app/: main.cpp
SVG_Editor/canvas/: CanvasView.h  CanvasViewCore.cpp  CanvasViewInput.cpp  DragCreationStrategy.cpp  DragCreationStrategy.h  MultiShapeSession.cpp  PathCreationStrategy.h  SelectionTransformOverlayItem.h
SVG_Editor/core/: CanvasGeometry.cpp  CanvasGeometry.h  FileManager.h  I18n.h  ShapeData.h
SVG_Editor/graphics/: ShapeFactory.h  ShapeItem.cpp  ShapeItem.h
SVG_Editor/ui/: MainWindow.cpp  MainWindow.h  PropertyPanel.h  PropertyPanelGeometryFields.h  ThemeMode.h  ThemeUtils.cpp  ThemeUtils.h  TutorialDialog.h
VectorGraphicsEditor/: CMakeLists.txt
VectorGraphicsEditor/app/: main.cpp
VectorGraphicsEditor/canvas/: CanvasViewSelection.cpp  MultiShapeSession.h  PathCreationStrategy.cpp  SelectionTransformOverlayItem.cpp
VectorGraphicsEditor/core/: AppLanguage.cpp  CanvasViewConstants.h  FileManager.cpp  I18n.cpp  SelectionFrame.cpp  ShapeData.cpp  ShapeData.h
VectorGraphicsEditor/graphics/: ShapeFactory.cpp
VectorGraphicsEditor/ui/: MainWindow.cpp  MainWindowActions.cpp  MainWindowActions.h  PropertyPanel.cpp  TutorialDialog.cpp
packaging/windows/: installer.nsi
presentation/: slides.md
presentation/sections/: 01-cover.md  02-outline.md  03-overview.md  04-architecture.md  05-shapedata.md  06-inheritance.md  07-strategy.md  08-di.md  09-events.md  10-painting.md  11-fileio.md  12-selection.md  13-i18n.md  14-testing.md  15-build.md  16-decisions.md  17-stats.md  18-demo.md  19-future.md  20-end.md
tests/: CMakeLists.txt  FileManagerTests.cpp  ShapeDataTests.cpp
tests/core/: CanvasGeometryTests.cpp  FileManagerTests.cpp  ShapeDataTests.cpp
tests/graphics/: ShapeItemTests.cpp
tests/ui/: MainWindowTests.cpp
